# ros2_normalize_ws

./: .gitignore  README.md
src/number_interfaces/: CMakeLists.txt  package.xml
src/number_interfaces/action/: Normalize.action
src/number_interfaces/srv/: GetCount.srv
src/number_normalizer/: package.xml  setup.cfg  setup.py
src/number_normalizer/number_normalizer/: normalize_client.py  normalize_server.py
src/number_normalizer/test/: test_normalize.py
